--- a/index.html
+++ b/index.html
@@ -3,21 +3,40 @@
 
 <head>
     <meta charset="utf-8">
-    <title>First AJAX Application</title>
+    <title>To Do List</title>
+    <script src="js/todo.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" charset="utf-8"></script>
 </head>
 
 <body>
-    <div class="row">
+    <h1>My To-Do List </h1>
+    <ul id="todolist">
+
+    </ul>
+    <form class="" action="index.html" method="post">
         <fieldset>
-            <legend>Pets available for adoption</legend>
+            <legend>Add a new to-do item</legend>
+            <div class="tableContainer">
+                <div class="tableRow">
+                    <label for="task">Task: </label>
+                    <input type="text" id="task" size="35" placeholder="get milk">
+                </div>
+                <div class="tableRow">
+                    <label for="who">Who should do it: </label>
+                    <input type="text" id="who" placeholder="Scott">
+                </div>
+                <div class="tableRow">
+                    <label for="dueDate">Due Date: </label>
+                    <input type="date" id="dueDate">
+                </div>
+                <div class="tableRow">
+                    <label for="submit"></label>
+                    <input type="button" id="submit" value="submit">
+                </div>
+            </div>
         </fieldset>
-        <div id="pets">
 
-        </div>
-    </div>
-
+    </form>
 </body>
 
 </html>
